--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:image" content="https://walidiv.github.io/Luxury-Nest-Hottel-site/path/to-your-image.jpg" />
+
   <title>Bootstrap Example</title>
   <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Lora:700" rel="stylesheet">
 
@@ -199,4 +201,5 @@
   <!-- Custom JS -->
   <script src="js/script.js"></script>
 </body>
+
 </html>
