--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://walidiv.github.io/Luxury-Nest-Hottel-site/path/to-your-image.jpg" />
+<!-- HTML Meta Tags -->
+<title>Luxury Nest Hotel</title>
+<meta name="description" content="Welcome to Luxury Nest Hotel – experience premium comfort and elegance.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://walidiv.github.io/Luxury-Nest-Hottel-site/menu-categories.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Luxury Nest Hotel">
+<meta property="og:description" content="Experience luxury and comfort at our exclusive hotel.">
+<meta property="og:image" content="https://walidiv.github.io/Luxury-Nest-Hottel-site/images/instagram-square-post-1080x1080.jpg">
+<meta property="og:image:width" content="1080">
+<meta property="og:image:height" content="1080">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="walidiv.github.io">
+<meta property="twitter:url" content="https://walidiv.github.io/Luxury-Nest-Hottel-site/menu-categories.html">
+<meta name="twitter:title" content="Luxury Nest Hotel">
+<meta name="twitter:description" content="Experience luxury and comfort at our exclusive hotel.">
+<meta name="twitter:image" content="https://walidiv.github.io/Luxury-Nest-Hottel-site/images/instagram-square-post-1080x1080.jpg">
 
   <title>Bootstrap Example</title>
   <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Lora:700" rel="stylesheet">
@@ -203,3 +223,4 @@
 </body>
 
 </html>
+
