--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
       <!-- Copyright -->
       <div class="text-center">
-        &copy;FUTURE LEADERS 2025
+        &copy;Luxury Nest Hottel 2025
       </div>
     </div>
   </footer>
@@ -223,5 +223,6 @@
 </body>
 
 </html>
+
 
 
