--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </nav>
 <!-- Phone section for small screens only -->
 <div id="phone-xs" class="visible-xs" >
-  <a href="tel:410-602-5008">+920-3554-3330-55</a>
+  <a href="tel:+920-3554-3330-55">+920-3554-3330-55</a>
  <div>CONTACT US</div>
 </div>
 
@@ -223,6 +223,7 @@
 </body>
 
 </html>
+
 
 
 
