--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
         <!-- Address -->
         <div class="col-sm-4" id="address">
           <span>Address:</span><br>
-          123 Main St.<br>
-          Anytown, USA<br>
+          Napura.<br>
+          baseen, Shoty<br>
           <p>Delivery area within 3-4 miles</p>
           <hr class="visible-xs">
         </div>
@@ -223,6 +223,7 @@
 </body>
 
 </html>
+
 
 
 
