--- a/menu-categories.html
+++ b/menu-categories.html
@@ -73,7 +73,7 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:410-602-5008">
-                <span>410-602-5008</span>
+                <span>+920-3554-3330-55</span>
               </a>
               <div>* We Deliver</div>
             </li>
@@ -83,7 +83,7 @@
     </nav>
 <!-- Phone section for small screens only -->
 <div id="phone-xs" class="visible-xs" >
-  <a href="tel:410-602-5008">+920-3554-3330-55</a>
+  <a href="tel:+920-3554-3330-55">+920-3554-3330-55</a>
  <div>CONTACT US</div>
 </div>
 
@@ -241,8 +241,8 @@ Sun: 11am - 8pm
         <!-- Address -->
         <div class="col-sm-4" id="address">
           <span>Address:</span><br>
-          123 Main St.<br>
-          Anytown, USA<br>
+          Naapura.<br>
+          Baseen, shoty<br>
           <p>Delivery area within 3-4 miles</p>
           <hr class="visible-xs">
         </div>
@@ -257,7 +257,8 @@ Sun: 11am - 8pm
 
       <!-- Copyright -->
       <div class="text-center">
-        &copy;FUTURE LEADERS 2025
+        &copy;Luxury Nest Hottel
+ 2025
       </div>
     </div>
   </footer>
@@ -536,4 +537,5 @@ hr.visible-xs {
   <!-- Custom JS -->
   <script src="js/script.js"></script>
 </body>
+
 </html>
