--- a/single-categories.html
+++ b/single-categories.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap Example</title>
+  <title>Luxury Nest Hottel 2025</title>
   <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Lora:700" rel="stylesheet">
 
 
@@ -71,8 +71,8 @@
               </a>
             </li>
             <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span>
+              <a href="tel:+920-3554-3330-55">
+                <span>+920-3554-3330-55</span>
               </a>
               <div>* We Deliver</div>
             </li>
@@ -82,7 +82,7 @@
     </nav>
 <!-- Phone section for small screens only -->
 <div id="phone-xs" class="visible-xs" >
-  <a href="tel:410-602-5008">+920-3554-3330-55</a>
+  <a href="tel:+920-3554-3330-55">+920-3554-3330-55</a>
  <div>CONTACT US</div>
 </div>
 
@@ -335,9 +335,9 @@ Sunday: 11:00 AM – 8:00 PM
         <!-- Address -->
         <div class="col-sm-4" id="address">
           🏠 <span>Address:</span><br>
-     Food, LLC<br>
-123 Main Street<br>
-Anytown, USA<br>
+     ©Luxury Nest Hottel2025<br>
+Napura.<br>
+Baseen, Shoty<br>
 📦 Delivery available within a 4-mile radius
           <hr class="visible-xs">
         </div>
@@ -377,3 +377,4 @@ Anytown, USA<br>
   <script src="js/script.js"></script>
 </body>
 </html>
+
