--- a/single-categories.html
+++ b/single-categories.html
@@ -72,7 +72,7 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:+920-3554-3330-55">
-                <span>+920-3554-3330-55</span>
+                <span>3554-310-766</span>
               </a>
               <div>* We Deliver</div>
             </li>
@@ -82,7 +82,7 @@
     </nav>
 <!-- Phone section for small screens only -->
 <div id="phone-xs" class="visible-xs" >
-  <a href="tel:+920-3554-3330-55">+920-3554-3330-55</a>
+  <a href="tel:+920-3554-3330-55">3554-310-766</a>
  <div>CONTACT US</div>
 </div>
 
@@ -360,7 +360,7 @@ Baseen, Shoty<br>
 
       <!-- Copyright -->
       <div class="text-center">
-        &copy;Food,LLC
+       Luxury Nest Hottel
       </div>
     </div>
   </footer>
@@ -377,4 +377,5 @@ Baseen, Shoty<br>
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
