--- a/single-categories.html
+++ b/single-categories.html
@@ -360,7 +360,7 @@ Baseen, Shoty<br>
 
       <!-- Copyright -->
       <div class="text-center">
-       Luxury Nest Hottel
+          &copy;Luxury Nest Hottel2025
       </div>
     </div>
   </footer>
@@ -377,5 +377,6 @@ Baseen, Shoty<br>
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
