--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:035-5431-0766">
-                <span>035-5431-0766</span>
+                <span>3554-31-0766</span>
               </a>
               <div>* We Deliver</div>
             </li>
@@ -105,7 +105,7 @@
     </nav>
 <!-- Phone section for small screens only -->
 <div id="phone-xs" class="visible-xs" >
-  <a href="tel:+920-3554-3330-55">+920-3554-3330-55</a>
+  <a href="tel:+920-3554-3330-55">3554-31-0766</a>
  <div>CONTACT US</div>
 </div>
 
@@ -223,6 +223,7 @@
 </body>
 
 </html>
+
 
 
 
