--- a/menu-categories.html
+++ b/menu-categories.html
@@ -71,9 +71,9 @@
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Awards
               </a>
             </li>
-            <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>+920-3554-3330-55</span>
+          <li id="phone" class="hidden-xs">
+              <a href="tel:035-5431-0766">
+                <span>3554-31-0766</span>
               </a>
               <div>* We Deliver</div>
             </li>
@@ -83,9 +83,11 @@
     </nav>
 <!-- Phone section for small screens only -->
 <div id="phone-xs" class="visible-xs" >
-  <a href="tel:+920-3554-3330-55">+920-3554-3330-55</a>
+  <a href="tel:+920-3554-3330-55">3554-31-0766</a>
  <div>CONTACT US</div>
 </div>
+
+
 
 
 
@@ -539,3 +541,4 @@ hr.visible-xs {
 </body>
 
 </html>
+
