--- a/menu-categories.html
+++ b/menu-categories.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap Example</title>
+  <title>Luxury Nest Hottel</title>
   <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Lora:700" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="css/menu-categaries.css">
@@ -541,4 +541,5 @@ hr.visible-xs {
 </body>
 
 </html>
+
 
