--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <meta name="twitter:description" content="Experience luxury and comfort at our exclusive hotel.">
 <meta name="twitter:image" content="https://walidiv.github.io/Luxury-Nest-Hottel-site/images/instagram-square-post-1080x1080.jpg">
 
-  <title>Bootstrap Example</title>
+  <title>Luxury Nest Hottel</title>
   <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Lora:700" rel="stylesheet">
 
 
@@ -223,6 +223,7 @@
 </body>
 
 </html>
+
 
 
 
